homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: default
spec:
  ingressClassName: nginx 
  rules:
    - host: "home.local"
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homepage
              port:
                number: 80
